--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<script src="libs/underscore.js"></script>
     	<script src="libs/jquery.js"></script>
     	<script src="libs/handlebars.js"></script>
+    	<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 		<body>
+			<div class="bigContainer">
 			<div id="user-container"></div>
 			<div id="repo-container"></div>
-
+			</div>
 			<script src="index.js"></script>
 			<script type="x-handlebars-template" id="userInfo">
 				<div class = "userProf">
