--- a/index.html
+++ b/index.html
@@ -7,37 +7,34 @@
     	<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 		<body>
-			<div class="bigContainer">
-			<div id="user-container"></div>
-			<div id="repo-container"></div>
-			</div>
+			<div id = "user-container"></div>
+			<div id = "repo-container"></div>
 			<script src="index.js"></script>
 			<script type="x-handlebars-template" id="userInfo">
-				<div class = "userProf">
+				<div class = "userProfile">
 					<div class = "box1">
-					<div class="avatar"><img src="{{avatar}}"/></div>
+					<div class="avatar"><img src = "{{avatar}}"</div>
 					<div class = "name">{{name}}</div>
 					<div class = "userName">{{userName}}</div>
 					</div>
-					<div class= "box2">
+					<div class = "box2">
 					<div class = "company">{{company}}</div>
 					<div class = "location">{{location}}</div>
 					<div class = "email">{{email}}</div>
-					<div class = "joinedDate">{{joinedDate}}</div>
-					<div class = "blog">{{blog}}</div>
+					<time datetime = "{{joinedDate}}">Joined on Jan 15, 2015</time>
 					</div>
 					<div class = "box3">
 					<div class = "FSF">
-						<div class = "followers">
-							<p>{{Followers}}</p><br/>
+						<div class = "Followers">
+							<p class = "numbers">{{Followers}}</p><br>
 							<p>followers</p>
 						</div>
 						<div class = "Starred">
-							<p>{{Starred}}</p><br/>
+							<p class = "numbers">{{Starred}}</p><br>
 							<p>Starred</p>
 						</div>
-						<div class = "following">
-							<p>{{Following}}</p><br/>
+						<div class = "Following">
+							<p class = "numbers">{{Following}}</p><br>
 							<p>Following</p>
 						</div>
 					</div>
@@ -46,13 +43,13 @@
 			</script>
 			
 			<script type="x-handlebars-template" id="theRepo">
-				<div class = "repos">
-					<div class = "nameRepo">{{name}}
-						<span>{{language}}</span>
+				<div class = "repositories">
+					<div class = "namerepo">{{name}}</div>
+						<span >{{language}}</span>
 						<span>{{stargazers}}</span>
 						<span>{{forkCount}}</span>
-					</div>
-					<div class = "forkFrom">{{fork_url}}</div>
+					
+					<div class = "forkFrom">{{forks}}</div>
 					<div class = "description">{{description}}</div>
 					<div class = "updated">{{updated}}</div>
 				</div>	
