--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     	<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 		<body>
+			<script src="index.js"></script>
 			<div class= "bigContainer">
 				<div id = "user-container"></div>
 				<div id = "repo-container"></div>
 			</div>
-			<script src="index.js"></script>
+			
 			<script type="x-handlebars-template" id="userInfo">
 				<div class = "userProfile">
 					<div class = "box1">
@@ -31,25 +32,26 @@
 						<div class = "FSF">
 							<div class = "Followers">
 								<p class = "numbers">{{Followers}}</p><br>
-								<p>followers</p>
+								<p class="letters">followers</p>
 							</div>
 							<div class = "Starred">
-								<p class = "numbers">{{Starred}}</p><br>
-								<p>Starred</p>
+								<p class = "numbers">0{{Starred}}</p><br>
+								<p class="letters">Starred</p>
 							</div>
 							<div class = "Following">
 								<p class = "numbers">{{Following}}</p><br>
-								<p>Following</p>
+								<p class="letters">Following</p>
 							</div>
 						</div>
 					</div>
 					<div class= "box4">
-						<div class="organizations"><strong>Organizations</strong></div>
+						<div class="organizations"><strong>Organizations</strong>
+						</div>
 					</div>
 				</div>	
 			</script>
 			
-			<script type="x-handlebars-template" id="theRepo">
+			<script type="x-handlebars-template" id="repoInfo">
 				<div class = "repositories">
 					<div class = "namerepo">{{name}}</div>
 						<span class = "language">{{language}}</span>
